Get more uniform random numbers
This is a complete rewrite of l3fp-random, to work around
a bug in \pdfuniformdeviate, namely that regardless of its
argument it can only produce 2^28 values.

--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -91,7 +91,6 @@
 %   \item Boolean logic: negation $\mathop{!}x$, conjunction
 %     $x\mathop{\&\&}y$, disjunction $x\mathop{\vert\vert}y$, ternary
 %     operator $x\mathop{?}y\mathop{:}z$.
-%   \item Random numbers: $\mathop{rand}()$, $\mathop{randint}(m,n)$.
 %   \item Exponentials: $\exp x$, $\ln x$, $x^y$.
 %   \item Trigonometry: $\sin x$, $\cos x$, $\tan x$, $\cot x$, $\sec
 %     x$, $\csc x$ expecting their arguments in radians, and
@@ -123,6 +122,8 @@
 %     ties rounded to an even value by default, towards zero if $t=0$,
 %     towards $+\infty$ if $t>0$ and towards $-\infty$ if $t<0$.  And
 %     \emph{(not yet)} modulo, and \enquote{quantize}.
+%   \item Random numbers: $\mathop{rand}()$, $\mathop{randint}(m,n)$ in
+%     \pdfTeX{} and \LuaTeX{} engines.
 %   \item Constants: \texttt{pi}, \texttt{deg} (one degree in radians).
 %   \item Dimensions, automatically expressed in points, \emph{e.g.},
 %     \texttt{pc} is~$12$.
@@ -1180,20 +1181,36 @@
 %   $\sqrt{\text{\nan{}}}=\text{\nan{}}$.
 % \end{function}
 %
-% \begin{function}[added = 2016-11-20]{rand}
+% \begin{function}[added = 2016-12-05]{rand}
 %   \begin{syntax}
 %     \cs{fp_eval:n} \{ |rand()| \}
 %   \end{syntax}
 %   Produces a pseudo-random floating-point number (multiple of
-%   $10^{-16}$) between $0$~included and $1$~excluded.
+%   $10^{-16}$) between $0$~included and $1$~excluded.  Available in
+%   \pdfTeX{} and \LuaTeX{} engines only.
 %   \begin{texnote}
-%     This is a wrapper around \tn{pdfuniformdeviate}.  The random seed
-%     can be queried using \tn{pdfrandomseed} and set using
-%     \tn{pdfsetrandomseed}.
+%     This is based on pseudo-random numbers provided by the engine's
+%     primitive \tn{pdfuniformdeviate} in \pdfTeX{} and
+%     \tn{uniformdeviate} in \LuaTeX{}.  The underlying code in
+%     \pdfTeX{} and \LuaTeX{} is based on Metapost, which follows an
+%     additive scheme recommended in Section 3.6 of \enquote{The Art of
+%     Computer Programming, Volume~2}.
+%
+%     While we are more careful than \tn{uniformdeviate} to preserve
+%     uniformity of the underlying stream of $28$-bit pseudo-random
+%     integers, these pseudo-random numbers should of course not be
+%     relied upon for serious numerical computations nor cryptography.
+%
+%     The random seed can be queried using \tn{pdfrandomseed} and set
+%     using \tn{pdfsetrandomseed} (in \LuaTeX{} \tn{randomseed} and
+%     \tn{setrandomseed}).  While a $32$-bit (signed) integer can be
+%     given as a seed, only the absolute value is used and any number
+%     beyond $2^{28}$ is divided by an appropriate power of~$2$.  We
+%     recommend using an integer in $[0,2^{28}-1]$.
 %   \end{texnote}
 % \end{function}
 %
-% \begin{function}[added = 2016-11-20]{randint}
+% \begin{function}[added = 2016-12-05]{randint}
 %   \begin{syntax}
 %     \cs{fp_eval:n} \{ |randint(| \meta{fpexpr} |)| \}
 %     \cs{fp_eval:n} \{ |randint(| \meta{fpexpr_1} , \meta{fpexpr_2} |)| \}
@@ -1201,12 +1218,8 @@
 %   Produces a pseudo-random integer between $1$~and \meta{fpexpr} or
 %   between \meta{fpexpr_1} and \meta{fpexpr_2} inclusive.  The bounds
 %   must be integers in the range $(-10^{16},10^{16})$ and the first
-%   must be smaller or equal to the second.
-%   \begin{texnote}
-%     This is a wrapper around \tn{pdfuniformdeviate}.  The random seed
-%     can be queried using \tn{pdfrandomseed} and set using
-%     \tn{pdfsetrandomseed}.
-%   \end{texnote}
+%   must be smaller or equal to the second.  See \texttt{rand} for
+%   important comments on how these pseudo-random numbers are generated.
 % \end{function}
 %
 % \begin{variable}[tested = m3fp-parse001]{inf, nan}
@@ -1297,8 +1310,6 @@
 %   \item Hyperbolic functions \texttt{cosh}, \texttt{sinh}, \texttt{tanh}.
 %   \item Inverse hyperbolics.
 %   \item Base conversion, input such as \texttt{0xAB.CDEF}.
-%   \item Random numbers (pgfmath provides |rnd|, |rand|, |random|), with
-%     seed reset at every \cs{fp_set:Nn}.
 %   \item Factorial (not with |!|), gamma function.
 %   \item Improve coefficients of the \texttt{sin} and \texttt{tan}
 %     series.
