Add \int_rand:nn, \seq_rand_item:N etc.
This adds \int_rand:nn, \seq_rand_item:N, \tl_rand_item:N
(and :n), \clist_rand_item:N (and :n), \prop_rand_key:N,
\prop_rand_value:N, \prop_rand_key_value:N. I've renamed
m3fp-rand001 to m3rand001 because it seemed to make more
sense to test all random-related functions together.

--- a/l3kernel/l3fp-random.dtx
+++ b/l3kernel/l3fp-random.dtx
@@ -112,8 +112,9 @@
 %   uniform pseudo-random integer in $[0,2^{28}-1]$.  For instance,
 %   setting~$n$ to (any multiple of) $2^{29}$ gives only even values.
 %   Thus it is only safe to call \cs{pdftex_uniformdeviate:D} with
-%   argument $2^{28}$.  We will also use variants of this number rounded
-%   down to multiples of $10^4$ and $10^8$.
+%   argument $2^{28}$.  This integer is also used in the implementation
+%   of \cs{int_rand:nn}.  We will also use variants of this number
+%   rounded down to multiples of $10^4$ and $10^8$.
 %    \begin{macrocode}
 \cs_new:Npn \@@_rand_uniform:
   { \pdftex_uniformdeviate:D \c_@@_rand_size_int }
