Detect rounding-induced infinite loops
Under the straightforward implementation,
  \fp_step_inline:nnnn { 1e16 } { 1 } { 2e16 } { }
would give an infinite loop because 1e16+1 is rounded
down to 1e16 and the loop never makes progress.  Such
cases are now detected.

--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -542,8 +542,8 @@
 %   \texttt{false}.
 % \end{function}
 %
-% \begin{function}[added = 2016-11-21, rEXP]
-%   {\fp_step_function:nnnN}
+% \begin{function}[added = 2016-11-21, updated = 2016-12-06, rEXP]
+%   {\fp_step_function:nnnN, \fp_step_function:nnnc}
 %   \begin{syntax}
 %     \cs{fp_step_function:nnnN} \Arg{initial value} \Arg{step} \Arg{final value} \meta{function}
 %   \end{syntax}
@@ -570,9 +570,14 @@
 %     [I saw 1.4] \quad
 %     [I saw 1.5] \quad
 %   \end{quote}
+%   \begin{texnote}
+%     Due to rounding, it may happen that adding the \meta{step} to the
+%     \meta{value} does not change the \meta{value}; such cases give an
+%     error, as they would otherwise lead to an infinite loop.
+%   \end{texnote}
 % \end{function}
 %
-% \begin{function}[added = 2016-11-21]
+% \begin{function}[added = 2016-11-21, updated = 2016-12-06]
 %   {\fp_step_inline:nnnn}
 %   \begin{syntax}
 %     \cs{fp_step_inline:nnnn} \Arg{initial value} \Arg{step} \Arg{final value} \Arg{code}
