When asked to sort too-long list, do nothing
Previously, as many items as possible were sorted and other
items were deleted.

--- a/l3experimental/l3sort/l3sort.dtx
+++ b/l3experimental/l3sort/l3sort.dtx
@@ -441,13 +441,13 @@
 \cs_new_protected:Npn \seq_sort:Nn
   {
     \@@_main:NNNnNn \tl_set:Nn
-      \seq_map_inline:Nn \seq_map_break:
+      \seq_map_inline:Nn \seq_map_break:n
       { \s__seq \@@_toks:NN \exp_not:N \__seq_item:n }
   }
 \cs_new_protected:Npn \seq_gsort:Nn
   {
     \@@_main:NNNnNn \tl_gset:Nn
-      \seq_map_inline:Nn \seq_map_break:
+      \seq_map_inline:Nn \seq_map_break:n
       { \s__seq \@@_toks:NN \exp_not:N \__seq_item:n }
   }
 %    \end{macrocode}
@@ -463,13 +463,13 @@
 \cs_new_protected:Npn \tl_sort:Nn
   {
     \@@_main:NNNnNn \tl_set:Nn
-      \tl_map_inline:Nn \tl_map_break:
+      \tl_map_inline:Nn \tl_map_break:n
       { \@@_toks:NN \prg_do_nothing: \prg_do_nothing: }
   }
 \cs_new_protected:Npn \tl_gsort:Nn
   {
     \@@_main:NNNnNn \tl_gset:Nn
-      \tl_map_inline:Nn \tl_map_break:
+      \tl_map_inline:Nn \tl_map_break:n
       { \@@_toks:NN \prg_do_nothing: \prg_do_nothing: }
   }
 %    \end{macrocode}
@@ -498,7 +498,7 @@
     \clist_if_empty:NF #2
       {
         \@@_main:NNNnNn #1
-          \clist_map_inline:Nn \clist_map_break:
+          \clist_map_inline:Nn \clist_map_break:n
           {
             \exp_last_unbraced:Nf \use_none:n
               { \@@_toks:NN \exp_args:No \__clist_wrap_item:n }
@@ -1031,7 +1031,7 @@
 %
 % \subsection{Messages}
 %
-% \begin{macro}{\@@_too_long_error:NNw}
+% \begin{macro}[aux]{\@@_too_long_error:NNw, \@@_too_long_error_aux:w}
 %   When there are too many items in a sequence, this is an error, and
 %   we clean up properly the mapping over items in the list: break using
 %   the type-specific breaking function |#1|.
@@ -1043,8 +1043,10 @@
       { \token_to_str:N #2 }
       { \int_eval:n { \l_@@_true_max_int - \l_@@_min_int } }
       { \int_eval:n { \l_@@_top_int - \l_@@_min_int } }
-    #1
+    #1 \@@_too_long_error_aux:w
   }
+\cs_new_protected:Npn \@@_too_long_error_aux:w #1 \use:x #2
+  { \group_end: }
 \__msg_kernel_new:nnnn { sort } { too-large }
   { The~list~#1~is~too~long~to~be~sorted~by~TeX. }
   {
