Force comparison code to call \sort_return_... exactly once

--- a/l3experimental/l3sort/l3sort.dtx
+++ b/l3experimental/l3sort/l3sort.dtx
@@ -640,11 +640,43 @@
     \exp_after:wN \@@_compare:nn \exp_after:wN
       { \tex_the:D \tex_toks:D \exp_after:wN \l_@@_A_int \exp_after:wN }
       \exp_after:wN { \tex_the:D \tex_toks:D \l_@@_C_int }
+    \prg_do_nothing:
+    \@@_return_mark:N
+    \@@_return_mark:N
+    \@@_return_none_error:
   }
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\sort_return_unchanged:}
+%
+% \begin{macro}{\sort_return_unchanged:, \sort_return_reversed:}
+% \begin{macro}[aux]{\@@_return_mark:N}
+% \begin{macro}[aux]{\@@_return_none_error:, \@@_return_two_error:w}
+%   The marker removes one token.  Each comparison should call
+%   \cs{sort_return_unchanged:} or \cs{sort_return_reversed:} exactly
+%   once.  If neither is called, \cs{@@_return_none_error:} is called.
+%    \begin{macrocode}
+\cs_new_protected:Npn \sort_return_unchanged: #1 \@@_return_mark:N
+  { #1 \@@_return_mark:N \@@_return_two_error:w \@@_return_unchanged: }
+\cs_new_protected:Npn \sort_return_reversed: #1 \@@_return_mark:N
+  { #1 \@@_return_mark:N \@@_return_two_error:w \@@_return_reversed: }
+\cs_new_protected:Npn \@@_return_mark:N #1 { }
+\cs_new_protected:Npn \@@_return_none_error:
+  {
+    \__msg_kernel_error:nnxx { sort } { return-none }
+      { \tex_the:D \tex_toks:D \l_@@_A_int }
+      { \tex_the:D \tex_toks:D \l_@@_C_int }
+    \@@_return_unchanged:
+  }
+\cs_new_protected:Npn \@@_return_two_error:w
+    #1 \@@_return_none_error:
+  { \__msg_kernel_error:nn { sort } { return-two } }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}[aux]{\@@_return_unchanged:}
 %   If the comparison function returns \texttt{ordered},
 %   then the second argument fed to \cs{@@_compare:nn}
 %   should remain to the right of the other one. Since
@@ -656,7 +688,7 @@
 %   is already in the correct registers and we are done
 %   with merging those two blocks.
 %    \begin{macrocode}
-\cs_new_protected:Npn \sort_return_unchanged:
+\cs_new_protected:Npn \@@_return_unchanged:
   {
     \tex_toks:D \l_@@_B_int \tex_toks:D \l_@@_C_int
     \tex_advance:D \l_@@_B_int - \c_one
@@ -668,8 +700,9 @@
   }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
 %
-% \begin{macro}[aux]{\sort_return_reversed:}
+% \begin{macro}[aux]{\@@_return_reversed:}
 %   If the comparison function returns \texttt{reversed},
 %   then the next item to add to the merger is the first
 %   argument, contents of the \tn{toks} register $A$.
@@ -680,7 +713,7 @@
 %   the second block, indexed by $C$, are copied
 %   to the merger by \cs{@@_merge_blocks_end:}.
 %    \begin{macrocode}
-\cs_new_protected:Npn \sort_return_reversed:
+\cs_new_protected:Npn \@@_return_reversed:
   {
     \tex_toks:D \l_@@_B_int \tex_toks:D \l_@@_A_int
     \tex_advance:D \l_@@_B_int - \c_one
@@ -1098,6 +1131,26 @@
   }
 %    \end{macrocode}
 % \end{macro}
+%
+%    \begin{macrocode}
+\__msg_kernel_new:nnnn { sort } { return-none }
+  { The~comparison~code~did~not~return. }
+  {
+    When~sorting~a~list,~the~code~to~compare~items~#1~and~#2~
+    did~not~call~
+    \iow_char:N\\sort_return_unchanged: ~nor~
+    \iow_char:N\\sort_return_reversed: .~
+    Exactly~one~of~these~should~be~called.
+  }
+\__msg_kernel_new:nnnn { sort } { return-two }
+  { The~comparison~code~returned~multiple~times. }
+  {
+    When~sorting~a~list,~the~code~to~compare~items~called~
+    \iow_char:N\\sort_return_unchanged: ~or~
+    \iow_char:N\\sort_return_reversed: ~multiple~times.~
+    Exactly~one~of~these~should~be~called.
+  }
+%    \end{macrocode}
 %
 % \subsection{Deprecated}
 %
