--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -128,7 +128,7 @@
 %
 % \begin{function}[added = 2015-11-12]
 %   {
-%     \char_set_active_eq:nN,  \char_set_active_eq:nc
+%     \char_set_active_eq:nN,  \char_set_active_eq:nc,
 %     \char_gset_active_eq:nN, \char_gset_active_eq:nc
 %   }
 %   \begin{syntax}
@@ -197,7 +197,7 @@
 %   \begin{verbatim}
 %     \char_set_catcode_other:N \%
 %   \end{verbatim}
-%   The assignment is local. 
+%   The assignment is local.
 % \end{function}
 %
 % \begin{function}[updated = 2015-11-11]
