Suppress some fake control sequences from the index

--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -158,7 +158,7 @@
 %   control sequence} is protected or if the \meta{variant} involves
 %   |x|~arguments, then the \meta{variant control sequence} will also be
 %   protected.  The \meta{variant} is created globally, as is any
-%   \cs{exp_args:N\meta{variant}} function needed to carry out the
+%   \cs[no-index]{exp_args:N\meta{variant}} function needed to carry out the
 %   expansion.
 % \end{function}
 %
