--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1352,7 +1352,7 @@
 \seq_set_split:Nnn \l_char_special_seq { }
   { \  \" \# \$ \% \& \\ \^ \_ \{ \} \~ }
 \seq_new:N \l_char_active_seq
-\seq_set_split:Nnn \l_char_special_seq { }
+\seq_set_split:Nnn \l_char_active_seq { }
   { \" \$ \& \^ \_ \~ }
 %    \end{macrocode}
 % \end{variable}
