Replace some \cs_set by \cs_new in various places
For instance some l3str functions used to be defined
in l3tl and an improved (or identical) definition was
given in the experimental l3str package using \cs_set.
Now that l3str (and only one definition) is in l3kernel
we should use \cs_new.

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -76,7 +76,7 @@
 % The code here is all very low-level, and should not in general be used
 % outside of the kernel. It is also important to note that many of the
 % functions here are closely tied to the immediate level \enquote{up},
-% and they must be used in the correct contexts.d
+% and they must be used in the correct contexts.
 %
 % \section{Box clipping}
 %
