--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -3193,7 +3193,7 @@
       }
   }
 \exp_args:Nno \use:nn
-  { \cs_set_protected:Npn \@@_from_file_do:w #1 }
+  { \cs_new_protected:Npn \@@_from_file_do:w #1 }
   { \c_@@_rescan_marker_tl }
   { \tl_set:No \l_@@_internal_a_tl {#1} }
 %    \end{macrocode}
