--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1138,7 +1138,7 @@
   }
 \cs_new:Npn \@@_abs:N #1
   { \if_meaning:w - #1 \else: \exp_after:wN #1 \fi: }
-\cs_set:Npn \dim_max:nn #1#2
+\cs_new:Npn \dim_max:nn #1#2
   {
     \dim_use:N \@@_eval:w \exp_after:wN \@@_maxmin:wwN
       \dim_use:N \@@_eval:w #1 \exp_after:wN ;
@@ -1146,7 +1146,7 @@
       >
     \@@_eval_end:
   }
-\cs_set:Npn \dim_min:nn #1#2
+\cs_new:Npn \dim_min:nn #1#2
   {
     \dim_use:N \@@_eval:w \exp_after:wN \@@_maxmin:wwN
       \dim_use:N \@@_eval:w #1 \exp_after:wN ;
@@ -1308,7 +1308,7 @@
 %   |while_do| and |do_while| functions for dimensions. Same as for the
 %   |int| type only the names have changed.
 %    \begin{macrocode}
-\cs_set:Npn \dim_while_do:nn #1#2
+\cs_new:Npn \dim_while_do:nn #1#2
   {
     \dim_compare:nT {#1}
       {
@@ -1316,7 +1316,7 @@
         \dim_while_do:nn {#1} {#2}
       }
   }
-\cs_set:Npn \dim_until_do:nn #1#2
+\cs_new:Npn \dim_until_do:nn #1#2
   {
     \dim_compare:nF {#1}
       {
@@ -1324,13 +1324,13 @@
         \dim_until_do:nn {#1} {#2}
       }
   }
-\cs_set:Npn \dim_do_while:nn #1#2
+\cs_new:Npn \dim_do_while:nn #1#2
   {
     #2
     \dim_compare:nT {#1}
       { \dim_do_while:nn {#1} {#2} }
   }
-\cs_set:Npn \dim_do_until:nn #1#2
+\cs_new:Npn \dim_do_until:nn #1#2
   {
     #2
     \dim_compare:nF {#1}
@@ -1349,7 +1349,7 @@
 %   |while_do| and |do_while| functions for dimensions. Same as for the
 %   |int| type only the names have changed.
 %    \begin{macrocode}
-\cs_set:Npn \dim_while_do:nNnn #1#2#3#4
+\cs_new:Npn \dim_while_do:nNnn #1#2#3#4
   {
     \dim_compare:nNnT {#1} #2 {#3}
       {
@@ -1357,7 +1357,7 @@
         \dim_while_do:nNnn {#1} #2 {#3} {#4}
       }
   }
-\cs_set:Npn \dim_until_do:nNnn #1#2#3#4
+\cs_new:Npn \dim_until_do:nNnn #1#2#3#4
   {
   \dim_compare:nNnF {#1} #2 {#3}
     {
@@ -1365,13 +1365,13 @@
       \dim_until_do:nNnn {#1} #2 {#3} {#4}
     }
   }
-\cs_set:Npn \dim_do_while:nNnn #1#2#3#4
+\cs_new:Npn \dim_do_while:nNnn #1#2#3#4
   {
     #4
     \dim_compare:nNnT {#1} #2 {#3}
       { \dim_do_while:nNnn {#1} #2 {#3} {#4} }
   }
-\cs_set:Npn \dim_do_until:nNnn #1#2#3#4
+\cs_new:Npn \dim_do_until:nNnn #1#2#3#4
   {
     #4
     \dim_compare:nNnF {#1} #2 {#3}
