--- a/l3experimental/l3sort/l3sort.dtx
+++ b/l3experimental/l3sort/l3sort.dtx
@@ -80,24 +80,24 @@
 %   \clist_sort:Nn \l_foo_clist
 %     {
 %       \int_compare:nNnTF { #1 } > { #2 }
-%         { \sort_return_reversed: }
-%         { \sort_return_unchanged: }
+%         { \sort_reversed: }
+%         { \sort_ordered: }
 %     }
 % \end{verbatim}
 % will result in \cs{l_foo_clist} holding the values
 % |{ -2 , 01 , +1 , 3 , 5 }| sorted in non-decreasing order.
 %
 % The code defining the comparison should perform
-% \cs{sort_return_reversed:} if the two items given as |#1|
+% \cs{sort_reversed:} if the two items given as |#1|
 % and |#2| are not in the correct order, and otherwise it
-% should call \cs{sort_return_unchanged:} to indicate that
+% should call \cs{sort_ordered:} to indicate that
 % the order of this pair of items should not be changed.
 %
 % For instance, a \meta{comparison code} consisting only
-% of \cs{sort_return_unchanged:} with no test will yield a trivial
+% of \cs{sort_ordered:} with no test will yield a trivial
 % sort: the final order is identical to the original order.
 % Conversely, using a \meta{comparison code} consisting only
-% of \cs{sort_return_reversed:} will reverse the list (in a fairly
+% of \cs{sort_reversed:} will reverse the list (in a fairly
 % inefficient way).
 %
 % \begin{texnote}
@@ -302,9 +302,9 @@
 %   for \tn{loctoks} every time a sorting function is called, as
 %   \pkg{etex} or \pkg{elocalloc} could be loaded.
 %
-%   In Con\TeX{}t mkiv the range is from
+%   In Con\TeX{}t MkIV the range is from
 %   $|\c_syst_last_allocated_toks|+1$ to \cs{c_max_register_int}, and in
-%   mkii it is from $|\lastallocatedtoks|+1$ to \cs{c_max_register_int}.
+%   MkII it is from $|\lastallocatedtoks|+1$ to \cs{c_max_register_int}.
 %   In all these cases, call \cs{@@_shrink_range:}.  The \LaTeX3 format
 %   mode is easiest: no \tn{toks} are ever allocated so available
 %   \tn{toks} range from $0$ to \cs{c_max_register_int} and we
@@ -635,16 +635,16 @@
 % \end{macro}
 %
 %
-% \begin{macro}{\sort_return_unchanged:, \sort_return_reversed:}
+% \begin{macro}{\sort_ordered:, \sort_reversed:}
 % \begin{macro}[aux]{\@@_return_mark:N}
 % \begin{macro}[aux]{\@@_return_none_error:, \@@_return_two_error:w}
 %   The marker removes one token.  Each comparison should call
-%   \cs{sort_return_unchanged:} or \cs{sort_return_reversed:} exactly
+%   \cs{sort_ordered:} or \cs{sort_reversed:} exactly
 %   once.  If neither is called, \cs{@@_return_none_error:} is called.
 %    \begin{macrocode}
-\cs_new_protected:Npn \sort_return_unchanged: #1 \@@_return_mark:N
-  { #1 \@@_return_mark:N \@@_return_two_error:w \@@_return_unchanged: }
-\cs_new_protected:Npn \sort_return_reversed: #1 \@@_return_mark:N
+\cs_new_protected:Npn \sort_ordered: #1 \@@_return_mark:N
+  { #1 \@@_return_mark:N \@@_return_two_error:w \@@_ordered: }
+\cs_new_protected:Npn \sort_reversed: #1 \@@_return_mark:N
   { #1 \@@_return_mark:N \@@_return_two_error:w \@@_return_reversed: }
 \cs_new_protected:Npn \@@_return_mark:N #1 { }
 \cs_new_protected:Npn \@@_return_none_error:
@@ -652,7 +652,7 @@
     \__msg_kernel_error:nnxx { sort } { return-none }
       { \tex_the:D \tex_toks:D \l_@@_A_int }
       { \tex_the:D \tex_toks:D \l_@@_C_int }
-    \@@_return_unchanged:
+    \@@_ordered:
   }
 \cs_new_protected:Npn \@@_return_two_error:w
     #1 \@@_return_none_error:
@@ -662,7 +662,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_return_unchanged:}
+% \begin{macro}[aux]{\@@_ordered:}
 %   If the comparison function returns \texttt{ordered},
 %   then the second argument fed to \cs{@@_compare:nn}
 %   should remain to the right of the other one. Since
@@ -674,7 +674,7 @@
 %   is already in the correct registers and we are done
 %   with merging those two blocks.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_return_unchanged:
+\cs_new_protected:Npn \@@_ordered:
   {
     \tex_toks:D \l_@@_B_int \tex_toks:D \l_@@_C_int
     \tex_advance:D \l_@@_B_int - \c_one
@@ -1124,29 +1124,19 @@
   {
     When~sorting~a~list,~the~code~to~compare~items~#1~and~#2~
     did~not~call~
-    \iow_char:N\\sort_return_unchanged: ~nor~
-    \iow_char:N\\sort_return_reversed: .~
+    \iow_char:N\\sort_ordered: ~nor~
+    \iow_char:N\\sort_reversed: .~
     Exactly~one~of~these~should~be~called.
   }
 \__msg_kernel_new:nnnn { sort } { return-two }
   { The~comparison~code~returned~multiple~times. }
   {
     When~sorting~a~list,~the~code~to~compare~items~called~
-    \iow_char:N\\sort_return_unchanged: ~or~
-    \iow_char:N\\sort_return_reversed: ~multiple~times.~
+    \iow_char:N\\sort_ordered: ~or~
+    \iow_char:N\\sort_reversed: ~multiple~times.~
     Exactly~one~of~these~should~be~called.
   }
 %    \end{macrocode}
-%
-% \subsection{Deprecated}
-%
-% \begin{macro}[deprecated=2017-12-31]{\sort_ordered:, \sort_reversed:}
-%   For removal after 2017-12-31.
-%    \begin{macrocode}
-\cs_new_eq:NN \sort_ordered: \sort_return_unchanged:
-\cs_new_eq:NN \sort_reversed: \sort_return_reversed:
-%    \end{macrocode}
-% \end{macro}
 %
 %    \begin{macrocode}
 %</initex|package>
