--- a/l3packages/l3keys2e/l3keys2e.dtx
+++ b/l3packages/l3keys2e/l3keys2e.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3keys2e.dtx (C) Copyright 2009,2011-2016 The LaTeX3 Project
+%% File: l3keys2e.dtx (C) Copyright 2009,2011-2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -89,7 +89,7 @@
 % option which simply stores a value would be created using:
 % \begin{verbatim}
 %  \keys_define:nn { module }
-%    { option .set:N = \l_module_variable_tl }
+%    { option .tl_set:N = \l_module_variable_tl }
 % \end{verbatim}
 % On its own, this will not make the key an option for the package or
 % class containing the definition. The second stage is therefore to
