One .value_required: missed

--- a/l3experimental/xcoffins/xcoffins.dtx
+++ b/l3experimental/xcoffins/xcoffins.dtx
@@ -712,7 +712,7 @@
     grow-bounding-box .bool_set:N       = \l_@@_bound_box_grow_bool ,
     grow-bounding-box .default:n        = true                      ,
     hoffset           .dim_set:N        = \l_@@_hoffset_dim         ,
-    hoffset           .value_required:  = true                      ,
+    hoffset           .value_required:n = true                      ,
     voffset           .dim_set:N        = \l_@@_voffset_dim         ,
     voffset           .value_required:n = true
   }
