Comment in unused code in l3trial

--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -1401,6 +1401,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% ^^A todo: this suffers from #151 and #273 like \tl_replace_all:Nnn did
 % \begin{macro}[aux]{\__tl_replace_set:NNnn}
 %   The arguments are two definition functions, the \meta{name}, and a
 %   list of pairs \Arg{from$\sb{i}$} \Arg{to$\sb{i}$}.  The auxiliaries
