Make @@@@ (four ats) give @@ in l3docstrip and l3doc (fixes #328)
Other changes simply use this new feature

--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -2606,7 +2606,7 @@
 % \begin{macro}{\@@par}
 %   The primitive is moved as otherwise the clever skipping code will fail.
 %    \begin{macrocode}
-\cs_set_eq:cN { @ @ par } \galley_par:
+\cs_set_eq:NN \@@@@par \galley_par:
 %    \end{macrocode}
 % \end{macro}
 %
