--- a/l3trial/l3htoks/l3htoks.dtx
+++ b/l3trial/l3htoks/l3htoks.dtx
@@ -1314,11 +1314,11 @@
     \htoks_code:n
       {
         \ifnum \lastpenalty =\z@
-          \csname @ @ italiccorr\endcsname
+          \@@@@italiccorr
         \else
           \count@ \lastpenalty
           \unpenalty
-          \csname @ @ italiccorr\endcsname
+          \@@@@italiccorr
           \penalty \count@
         \fi
       }
