--- a/l3kernel/l3oldmodules.dtx
+++ b/l3kernel/l3oldmodules.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3oldmodules.dtx Copyright (C) 2014,2016 The LaTeX3 Project
+%% File: l3oldmodules.dtx Copyright (C) 2014,2016,2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -106,6 +106,7 @@
 %<l3quark>{l3quark}
 %<l3seq>{l3seq}
 %<l3skip>{l3skip}
+%<l3sort>{l3sort}
 %<l3str>{l3str}
 %<l3tl>{l3tl}
 %<l3token>{l3token}
