--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3sort.dtx (C) Copyright 2012,2014-2016 The LaTeX3 Project
+%% File l3sort.dtx (C) Copyright 2012,2014-2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -9,7 +9,7 @@
 %
 %    http://www.latex-project.org/lppl.txt
 %
-% This file is part of the "l3experimental bundle" (The Work in LPPL)
+% This file is part of the "l3kernel bundle" (The Work in LPPL)
 % and all files in that bundle must be distributed together.
 %
 % -----------------------------------------------------------------------
@@ -20,28 +20,14 @@
 %
 % for those people who are interested.
 %
-%<*driver|package>
-% The version of expl3 required is tested as early as possible, as
-% some really old versions do not define \ProvidesExplPackage.
-\RequirePackage{expl3}[2017/01/28]
-%<package>\@ifpackagelater{expl3}{2017/01/28}
-%<package>  {}
-%<package>  {%
-%<package>    \PackageError{l3sort}{Support package l3kernel too old}
-%<package>      {%
-%<package>        Please install an up to date version of l3kernel\MessageBreak
-%<package>        using your TeX package manager or from CTAN.\MessageBreak
-%<package>        \MessageBreak
-%<package>        Loading l3sort will abort!%
-%<package>      }%
-%<package>    \endinput
-%<package>  }
-\GetIdInfo$Id$
-  {L3 Experimental sorting functions}
-%</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
-\usepackage{amsmath}
+%</driver>
+%<*driver|package>
+\GetIdInfo$Id$
+  {L3 Sorting functions}
+%</driver|package>
+%<*driver>
 \begin{document}
   \DocInput{\jobname.dtx}
 \end{document}
@@ -49,7 +35,7 @@
 % \fi
 %
 % \title{^^A
-%   The \pkg{l3sort} package\\ Sorting lists^^A
+%   The \pkg{l3sort} package\\ Sorting functions^^A
 %   \thanks{This file describes v\ExplFileVersion,
 %      last revised \ExplFileDate.}^^A
 % }
@@ -68,8 +54,6 @@
 % \maketitle
 %
 % \begin{documentation}
-%
-% \section{\pkg{l3sort} documentation}
 %
 % \LaTeX3 comes with a facility to sort list variables (sequences,
 % token lists, or comma-lists) according to some user-defined
@@ -138,8 +122,6 @@
 %   \meta{clist var}.
 % \end{function}
 %
-% {\renewcommand{\thefootnote}{}\footnotetext{\CodedocExplainEXP}}
-%
 % \begin{function}[EXP]{\tl_sort:nN}
 %   \begin{syntax}
 %     \cs{tl_sort:nN} \Arg{token list} \meta{conditional}
@@ -169,13 +151,6 @@
 %
 %    \begin{macrocode}
 %<@@=sort>
-%    \end{macrocode}
-%
-%    \begin{macrocode}
-%<*package>
-\ProvidesExplPackage
-  {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
-%</package>
 %    \end{macrocode}
 %
 % \subsection{Variables}
@@ -688,7 +663,6 @@
     \@@_merge_blocks_aux:
   }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 %
 % \begin{macro}[aux]{\@@_return_swapped:}
