--- a/l3kernel/source3body.tex
+++ b/l3kernel/source3body.tex
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: source3body.tex Copyright (C) 1990-2015 The LaTeX3 Project
+%% File: source3body.tex Copyright (C) 1990-2015,2017 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -453,6 +453,7 @@ used on top of \LaTeXe{} if \cs{outer} tokens are used in the arguments.
   }
 \ExplSyntaxOff
 
+\DocInput{l3sort.dtx}
 \DocInput{l3candidates.dtx}
 \DocInput{l3sys.dtx}
 \DocInput{l3luatex.dtx}
